# liom_lang

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml  dependencies.yml  fuzz.yml
ci/: check.sh  dependencies.sh  fmt.sh  fmt_install.sh  fuzz.sh  fuzz_install.sh
crates/arena/: Cargo.toml
crates/arena/src/: lib.rs
crates/fuzz/: Cargo.toml
crates/liom_cli/: Cargo.toml
crates/liom_cli/src/: main.rs
crates/liom_hir/: Cargo.toml
crates/liom_hir/src/: database.rs  lib.rs
crates/liom_hir/src/database/: tests.rs
crates/liom_lexer/: Cargo.toml  build.rs
crates/liom_lexer/src/: lib.rs  matcher.rs  tests.rs
crates/liom_node/: Cargo.toml
crates/liom_node/src/: lib.rs
crates/liom_parser/: Cargo.toml
crates/liom_parser/src/: event.rs  grammar.rs  lib.rs  parser.rs
crates/liom_parser/src/grammar/: expr.rs  stmt.rs
crates/liom_syntax/: Cargo.toml
crates/liom_syntax/src/: ast.rs  lib.rs  syntax_kind.rs  tests.rs  token_source.rs  tree_sink.rs  validation.rs
crates/liom_syntax/src/tests/: parser.rs
crates/liom_syntax/src/tests/parser/: grammar.rs
crates/liom_syntax/src/tests/parser/grammar/: expr.rs  stmt.rs
crates/liom_syntax/src/validation/: tests.rs
crates/liom_token/: Cargo.toml
crates/liom_token/src/: lib.rs
docs/syntax/: syntax.md  tokens.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/main/: example
fuzz/fuzz_targets/: main.rs
syntax/: syntax.md
