[workspace]
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal
arena = { path = "crates/arena", default-features = false }
liom_cli = { path = "crates/liom_cli", default-features = false }
liom_hir = { path = "crates/liom_hir", default-features = false }
liom_lexer = { path = "crates/liom_lexer", default-features = false }
liom_node = { path = "crates/liom_node", default-features = false }
liom_parser = { path = "crates/liom_parser", default-features = false }
liom_syntax = { path = "crates/liom_syntax", default-features = false }
liom_token = { path = "crates/liom_token", default-features = false }

# External
expect-test = { version = "1.4.0", default-features = false }
regex-automata = { version = "0.1.10", default-features = false }
rowan = { version = "0.15.10", default-features = false }
smol_str = { version = "0.1.23", default-features = false }
