[workspace]
members = ["crates/*", "fuzz"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
edition = "2024"
repository = "https://github.com/dallenng/liom_lang"
license = "MIT"

[workspace.dependencies]
arena = { path = "crates/arena", default-features = false }
expect-test = { version = "1.5.0", default-features = false }
libfuzzer-sys = { version = "0.4.10", default-features = false, features = ["link_libfuzzer"] }
liom_hir = { path = "crates/liom_hir", default-features = false }
liom_lexer = { path = "crates/liom_lexer", default-features = false }
liom_node = { path = "crates/liom_node", default-features = false }
liom_parser = { path = "crates/liom_parser", default-features = false }
liom_syntax = { path = "crates/liom_syntax", default-features = false }
liom_token = { path = "crates/liom_token", default-features = false }
regex-automata = { version = "0.1.10", default-features = false }
rowan = { version = "0.16.1", default-features = false }
smol_str = { version = "0.3.4", default-features = false }

[workspace.lints.rust]
deprecated_safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"
