[package]
name = "fuzz"
version = "0.0.0"
authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.6"
liom_hir = { path = "../crates/liom_hir" }
liom_syntax = { path = "../crates/liom_syntax" }

[profile.release]
debug = 1

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"
test = false
doc = false
