[package]
name = "fuzz"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
libfuzzer-sys = { workspace = true }
liom_hir = { workspace = true }
liom_syntax = { workspace = true }

[lints]
workspace = true
