[package]
name = "liom_hir"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
arena = { workspace = true }
liom_syntax = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true
