[package]
name = "liom_lexer"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
liom_token = { path = "../liom_token" }
regex-automata = { version = "0.1", default-features = false }

[build-dependencies]
liom_token = { path = "../liom_token" }
regex-automata = "0.1"
