[package]
name = "liom_lexer"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
liom_token = { workspace = true }
regex-automata = { workspace = true }

[build-dependencies]
liom_token = { workspace = true }
regex-automata = { workspace = true, features = ["std"] }

[lints]
workspace = true
