[package]
name = "liom_syntax"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Dallenne <dallenneguillaume@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
liom_lexer = { path = "../liom_lexer" }
liom_parser = { path = "../liom_parser" }
rowan = "0.13"

[dev-dependencies]
expect-test = "1"
