[package]
name = "liom_syntax"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
liom_lexer = { workspace = true }
liom_parser = { workspace = true }
rowan = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
