[package]
name = "liom_syntax"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
liom_lexer = { workspace = true }
liom_parser = { workspace = true }
rowan = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[lints]
workspace = true
